etc/ui.for_clang_parse.h


#define _UI_ENUM(s) typedef unsigned int s; enum
#define uiPi 3.14159265358979323846264338327950288419716939937510582097494459
typedef unsigned int uiForEach;
 enum {
	uiForEachContinue,
	uiForEachStop,
};
typedef struct uiInitOptions uiInitOptions;
struct uiInitOptions {
	size_t Size;
};
 const char *uiInit(uiInitOptions *options);
 void uiUninit(void);
 void uiFreeInitError(const char *err);
 void uiMain(void);
 void uiMainSteps(void);
 int uiMainStep(int wait);
 void uiQuit(void);
 void uiQueueMain(void (*f)(void *data), void *data);
 void uiTimer(int milliseconds, int (*f)(void *data), void *data);
 void uiOnShouldQuit(int (*f)(void *data), void *data);
 void uiFreeText(char *text);
typedef struct uiControl uiControl;
struct uiControl {
	uint32_t Signature;
	uint32_t OSSignature;
	uint32_t TypeSignature;
	void (*Destroy)(uiControl *);
	uintptr_t (*Handle)(uiControl *);
	uiControl *(*Parent)(uiControl *);
	void (*SetParent)(uiControl *, uiControl *);
	int (*Toplevel)(uiControl *);
	int (*Visible)(uiControl *);
	void (*Show)(uiControl *);
	void (*Hide)(uiControl *);
	int (*Enabled)(uiControl *);
	void (*Enable)(uiControl *);
	void (*Disable)(uiControl *);
};
#define uiControl(this) ((uiControl *) (this))
 void uiControlDestroy(uiControl *);
 uintptr_t uiControlHandle(uiControl *);
 uiControl *uiControlParent(uiControl *);
 void uiControlSetParent(uiControl *, uiControl *);
 int uiControlToplevel(uiControl *);
 int uiControlVisible(uiControl *);
 void uiControlShow(uiControl *);
 void uiControlHide(uiControl *);
 int uiControlEnabled(uiControl *);
 void uiControlEnable(uiControl *);
 void uiControlDisable(uiControl *);
 uiControl *uiAllocControl(size_t n, uint32_t OSsig, uint32_t typesig, const char *typenamestr);
 void uiFreeControl(uiControl *);
 void uiControlVerifySetParent(uiControl *, uiControl *);
 int uiControlEnabledToUser(uiControl *);
 void uiUserBugCannotSetParentOnToplevel(const char *type);
typedef struct uiWindow uiWindow;
#define uiWindow(this) ((uiWindow *) (this))
 char *uiWindowTitle(uiWindow *w);
 void uiWindowSetTitle(uiWindow *w, const char *title);
 void uiWindowContentSize(uiWindow *w, int *width, int *height);
 void uiWindowSetContentSize(uiWindow *w, int width, int height);
 int uiWindowFullscreen(uiWindow *w);
 void uiWindowSetFullscreen(uiWindow *w, int fullscreen);
 void uiWindowOnContentSizeChanged(uiWindow *w, void (*f)(uiWindow *, void *), void *data);
 void uiWindowOnClosing(uiWindow *w, int (*f)(uiWindow *w, void *data), void *data);
 int uiWindowBorderless(uiWindow *w);
 void uiWindowSetBorderless(uiWindow *w, int borderless);
 void uiWindowSetChild(uiWindow *w, uiControl *child);
 int uiWindowMargined(uiWindow *w);
 void uiWindowSetMargined(uiWindow *w, int margined);
 uiWindow *uiNewWindow(const char *title, int width, int height, int hasMenubar);
typedef struct uiButton uiButton;
#define uiButton(this) ((uiButton *) (this))
 char *uiButtonText(uiButton *b);
 void uiButtonSetText(uiButton *b, const char *text);
 void uiButtonOnClicked(uiButton *b, void (*f)(uiButton *b, void *data), void *data);
 uiButton *uiNewButton(const char *text);
typedef struct uiBox uiBox;
#define uiBox(this) ((uiBox *) (this))
 void uiBoxAppend(uiBox *b, uiControl *child, int stretchy);
 void uiBoxDelete(uiBox *b, int index);
 int uiBoxPadded(uiBox *b);
 void uiBoxSetPadded(uiBox *b, int padded);
 uiBox *uiNewHorizontalBox(void);
 uiBox *uiNewVerticalBox(void);
typedef struct uiCheckbox uiCheckbox;
#define uiCheckbox(this) ((uiCheckbox *) (this))
 char *uiCheckboxText(uiCheckbox *c);
 void uiCheckboxSetText(uiCheckbox *c, const char *text);
 void uiCheckboxOnToggled(uiCheckbox *c, void (*f)(uiCheckbox *c, void *data), void *data);
 int uiCheckboxChecked(uiCheckbox *c);
 void uiCheckboxSetChecked(uiCheckbox *c, int checked);
 uiCheckbox *uiNewCheckbox(const char *text);
typedef struct uiEntry uiEntry;
#define uiEntry(this) ((uiEntry *) (this))
 char *uiEntryText(uiEntry *e);
 void uiEntrySetText(uiEntry *e, const char *text);
 void uiEntryOnChanged(uiEntry *e, void (*f)(uiEntry *e, void *data), void *data);
 int uiEntryReadOnly(uiEntry *e);
 void uiEntrySetReadOnly(uiEntry *e, int readonly);
 uiEntry *uiNewEntry(void);
 uiEntry *uiNewPasswordEntry(void);
 uiEntry *uiNewSearchEntry(void);
typedef struct uiLabel uiLabel;
#define uiLabel(this) ((uiLabel *) (this))
 char *uiLabelText(uiLabel *l);
 void uiLabelSetText(uiLabel *l, const char *text);
 uiLabel *uiNewLabel(const char *text);
typedef struct uiTab uiTab;
#define uiTab(this) ((uiTab *) (this))
 void uiTabAppend(uiTab *t, const char *name, uiControl *c);
 void uiTabInsertAt(uiTab *t, const char *name, int before, uiControl *c);
 void uiTabDelete(uiTab *t, int index);
 int uiTabNumPages(uiTab *t);
 int uiTabMargined(uiTab *t, int page);
 void uiTabSetMargined(uiTab *t, int page, int margined);
 uiTab *uiNewTab(void);
typedef struct uiGroup uiGroup;
#define uiGroup(this) ((uiGroup *) (this))
 char *uiGroupTitle(uiGroup *g);
 void uiGroupSetTitle(uiGroup *g, const char *title);
 void uiGroupSetChild(uiGroup *g, uiControl *c);
 int uiGroupMargined(uiGroup *g);
 void uiGroupSetMargined(uiGroup *g, int margined);
 uiGroup *uiNewGroup(const char *title);
typedef struct uiSpinbox uiSpinbox;
#define uiSpinbox(this) ((uiSpinbox *) (this))
 int uiSpinboxValue(uiSpinbox *s);
 void uiSpinboxSetValue(uiSpinbox *s, int value);
 void uiSpinboxOnChanged(uiSpinbox *s, void (*f)(uiSpinbox *s, void *data), void *data);
 uiSpinbox *uiNewSpinbox(int min, int max);
typedef struct uiSlider uiSlider;
#define uiSlider(this) ((uiSlider *) (this))
 int uiSliderValue(uiSlider *s);
 void uiSliderSetValue(uiSlider *s, int value);
 void uiSliderOnChanged(uiSlider *s, void (*f)(uiSlider *s, void *data), void *data);
 uiSlider *uiNewSlider(int min, int max);
typedef struct uiProgressBar uiProgressBar;
#define uiProgressBar(this) ((uiProgressBar *) (this))
 int uiProgressBarValue(uiProgressBar *p);
 void uiProgressBarSetValue(uiProgressBar *p, int n);
 uiProgressBar *uiNewProgressBar(void);
typedef struct uiSeparator uiSeparator;
#define uiSeparator(this) ((uiSeparator *) (this))
 uiSeparator *uiNewHorizontalSeparator(void);
 uiSeparator *uiNewVerticalSeparator(void);
typedef struct uiCombobox uiCombobox;
#define uiCombobox(this) ((uiCombobox *) (this))
 void uiComboboxAppend(uiCombobox *c, const char *text);
 int uiComboboxSelected(uiCombobox *c);
 void uiComboboxSetSelected(uiCombobox *c, int n);
 void uiComboboxOnSelected(uiCombobox *c, void (*f)(uiCombobox *c, void *data), void *data);
 uiCombobox *uiNewCombobox(void);
typedef struct uiEditableCombobox uiEditableCombobox;
#define uiEditableCombobox(this) ((uiEditableCombobox *) (this))
 void uiEditableComboboxAppend(uiEditableCombobox *c, const char *text);
 char *uiEditableComboboxText(uiEditableCombobox *c);
 void uiEditableComboboxSetText(uiEditableCombobox *c, const char *text);
 void uiEditableComboboxOnChanged(uiEditableCombobox *c, void (*f)(uiEditableCombobox *c, void *data), void *data);
 uiEditableCombobox *uiNewEditableCombobox(void);
typedef struct uiRadioButtons uiRadioButtons;
#define uiRadioButtons(this) ((uiRadioButtons *) (this))
 void uiRadioButtonsAppend(uiRadioButtons *r, const char *text);
 int uiRadioButtonsSelected(uiRadioButtons *r);
 void uiRadioButtonsSetSelected(uiRadioButtons *r, int n);
 void uiRadioButtonsOnSelected(uiRadioButtons *r, void (*f)(uiRadioButtons *, void *), void *data);
 uiRadioButtons *uiNewRadioButtons(void);
struct tm;
typedef struct uiDateTimePicker uiDateTimePicker;
#define uiDateTimePicker(this) ((uiDateTimePicker *) (this))
 void uiDateTimePickerOnChanged(uiDateTimePicker *d, void (*f)(uiDateTimePicker *, void *), void *data);
typedef struct uiMultilineEntry uiMultilineEntry;
 void uiMultilineEntryOnChanged(uiMultilineEntry *e, void (*f)(uiMultilineEntry *e, void *data), void *data);
typedef struct uiMenuItem uiMenuItem;
 void uiMenuItemOnClicked(uiMenuItem *m, void (*f)(uiMenuItem *sender, uiWindow *window, void *data), void *data);
_UI_ENUM(uiWindowResizeEdge) {
	uiWindowResizeEdgeLeft,
	uiWindowResizeEdgeTop,
	uiWindowResizeEdgeRight,
	uiWindowResizeEdgeBottom,
	uiWindowResizeEdgeTopLeft,
	uiWindowResizeEdgeTopRight,
	uiWindowResizeEdgeBottomLeft,
	uiWindowResizeEdgeBottomRight,
}
_UI_ENUM(uiDrawBrushType) {
	uiDrawBrushTypeSolid,
	uiDrawBrushTypeLinearGradient,
	uiDrawBrushTypeRadialGradient,
	uiDrawBrushTypeImage,
}
_UI_ENUM(uiDrawLineCap) {
	uiDrawLineCapFlat,
	uiDrawLineCapRound,
	uiDrawLineCapSquare,
}
_UI_ENUM(uiDrawLineJoin) {
	uiDrawLineJoinMiter,
	uiDrawLineJoinRound,
	uiDrawLineJoinBevel,
}
_UI_ENUM(uiDrawFillMode) {
	uiDrawFillModeWinding,
	uiDrawFillModeAlternate,
}
_UI_ENUM(uiAttributeType) {
	uiAttributeTypeFamily,
	uiAttributeTypeSize,
	uiAttributeTypeWeight,
	uiAttributeTypeItalic,
	uiAttributeTypeStretch,
	uiAttributeTypeColor,
	uiAttributeTypeBackground,
	uiAttributeTypeUnderline,
	uiAttributeTypeUnderlineColor,
	uiAttributeTypeFeatures,
}
_UI_ENUM(uiTextWeight) {
	uiTextWeightMinimum = 0,
	uiTextWeightThin = 100,
	uiTextWeightUltraLight = 200,
	uiTextWeightLight = 300,
	uiTextWeightBook = 350,
	uiTextWeightNormal = 400,
	uiTextWeightMedium = 500,
	uiTextWeightSemiBold = 600,
	uiTextWeightBold = 700,
	uiTextWeightUltraBold = 800,
	uiTextWeightHeavy = 900,
	uiTextWeightUltraHeavy = 950,
	uiTextWeightMaximum = 1000,
}
_UI_ENUM(uiTextItalic) {
	uiTextItalicNormal,
	uiTextItalicOblique,
	uiTextItalicItalic,
}
_UI_ENUM(uiTextStretch) {
	uiTextStretchUltraCondensed,
	uiTextStretchExtraCondensed,
	uiTextStretchCondensed,
	uiTextStretchSemiCondensed,
	uiTextStretchNormal,
	uiTextStretchSemiExpanded,
	uiTextStretchExpanded,
	uiTextStretchExtraExpanded,
	uiTextStretchUltraExpanded,
}
_UI_ENUM(uiUnderline) {
	uiUnderlineNone,
	uiUnderlineSingle,
	uiUnderlineDouble,
	uiUnderlineSuggestion,		
}
_UI_ENUM(uiUnderlineColor) {
	uiUnderlineColorCustom,
	uiUnderlineColorSpelling,
	uiUnderlineColorGrammar,
	uiUnderlineColorAuxiliary,		
}
_UI_ENUM(uiDrawTextAlign) {
	uiDrawTextAlignLeft,
	uiDrawTextAlignCenter,
	uiDrawTextAlignRight,
}
typedef struct uiFontButton uiFontButton;
 void uiFontButtonOnChanged(uiFontButton *b, void (*f)(uiFontButton *, void *), void *data);
_UI_ENUM(uiModifiers) {
	uiModifierCtrl = 1 << 0,
	uiModifierAlt = 1 << 1,
	uiModifierShift = 1 << 2,
	uiModifierSuper = 1 << 3,
}
_UI_ENUM(uiExtKey) {
	uiExtKeyEscape = 1,
	uiExtKeyInsert,			
	uiExtKeyDelete,
	uiExtKeyHome,
	uiExtKeyEnd,
	uiExtKeyPageUp,
	uiExtKeyPageDown,
	uiExtKeyUp,
	uiExtKeyDown,
	uiExtKeyLeft,
	uiExtKeyRight,
	uiExtKeyF1,			
	uiExtKeyF2,
	uiExtKeyF3,
	uiExtKeyF4,
	uiExtKeyF5,
	uiExtKeyF6,
	uiExtKeyF7,
	uiExtKeyF8,
	uiExtKeyF9,
	uiExtKeyF10,
	uiExtKeyF11,
	uiExtKeyF12,
	uiExtKeyN0,			
	uiExtKeyN1,			
	uiExtKeyN2,
	uiExtKeyN3,
	uiExtKeyN4,
	uiExtKeyN5,
	uiExtKeyN6,
	uiExtKeyN7,
	uiExtKeyN8,
	uiExtKeyN9,
	uiExtKeyNDot,
	uiExtKeyNEnter,
	uiExtKeyNAdd,
	uiExtKeyNSubtract,
	uiExtKeyNMultiply,
	uiExtKeyNDivide,
}
typedef struct uiColorButton uiColorButton;
 void uiColorButtonOnChanged(uiColorButton *b, void (*f)(uiColorButton *, void *), void *data);
_UI_ENUM(uiAlign) {
	uiAlignFill,
	uiAlignStart,
	uiAlignCenter,
	uiAlignEnd,
}
_UI_ENUM(uiAt) {
	uiAtLeading,
	uiAtTop,
	uiAtTrailing,
	uiAtBottom,
}
_UI_ENUM(uiTableValueType) {
	uiTableValueTypeString,
	uiTableValueTypeImage,
	uiTableValueTypeInt,
	uiTableValueTypeColor,
}