libui.odin

// 6 april 2015

// TODO add a uiVerifyControlType() function that can be used by control implementations to verify controls

// TODOs
// - make getters that return whether something exists accept a NULL pointer to discard the value (and thus only return that the thing exists?)
// - const-correct everything
// - normalize documentation between typedefs and structs

// #ifndef __LIBUI_UI_H__
// #define __LIBUI_UI_H__
package libui

when ODIN_OS == .Windows do foreign import lib "libui.lib"
when ODIN_OS == .Darwin   do foreign import lib "bin/libui.dylib"
when ODIN_OS == .Linux   do foreign import lib "bin/libui.so"

import "core:c"

uiPi :: 3.14159265358979323846264338327950288419716939937510582097494459

// uiForEach represents the return value from one of libui's various ForEach functions.
// _UI_ENUM(uiForEach) {
// 	uiForEachContinue,
// 	uiForEachStop,
// };
// _UI_ENUM(uiForEach) {
uiForEach :: u32

uiForEachStop     :: 1
uiForEachContinue :: 0

uiInitOptions :: struct {
	Size: c.size_t,
}

to_uiControl :: proc(v: rawptr) -> ^uiControl{
    return cast(^uiControl)(v)
}

// alias of to_uiControl
as_uiControl :: proc(v: rawptr) -> ^uiControl{
    return to_uiControl(v)
}

@(default_calling_convention="c")
foreign lib {
	uiInit          :: proc(options: ^uiInitOptions) -> cstring ---
	uiUninit        :: proc() ---
	uiFreeInitError :: proc(err: cstring) ---
	uiMain          :: proc() ---
	uiMainSteps     :: proc() ---
	uiMainStep      :: proc(wait: i32) -> i32 ---
	uiQuit          :: proc() ---
	uiQueueMain     :: proc(f: proc "c" (data: rawptr), data: rawptr) ---

	// TODO standardize the looping behavior return type, either with some enum or something, and the test expressions throughout the code
	// TODO figure out what to do about looping and the exact point that the timer is rescheduled so we can document it; see https://github.com/andlabs/libui/pull/277
	// TODO (also in the above link) document that this cannot be called from any thread, unlike uiQueueMain()
	// TODO document that the minimum exact timing, either accuracy (timer burst, etc.) or granularity (15ms on Windows, etc.), is OS-defined
	// TODO also figure out how long until the initial tick is registered on all platforms to document
	// TODO also add a comment about how useful this could be in bindings, depending on the language being bound to
	uiTimer        :: proc(milliseconds: i32, f: proc "c" (data: rawptr) -> i32, data: rawptr) ---
	uiOnShouldQuit :: proc(f: proc "c" (data: rawptr) -> i32, data: rawptr) ---
	uiFreeText     :: proc(text: cstring) ---
}

uiControl :: struct {
	Signature:     u32,
	OSSignature:   u32,
	TypeSignature: u32,
	Destroy:       proc "c" (^uiControl),
	Handle:        proc "c" (^uiControl) -> c.uintptr_t,
	Parent:        proc "c" (^uiControl) -> ^uiControl,
	SetParent:     proc "c" (^uiControl, ^uiControl),
	Toplevel:      proc "c" (^uiControl) -> i32,
	Visible:       proc "c" (^uiControl) -> i32,
	Show:          proc "c" (^uiControl),
	Hide:          proc "c" (^uiControl),
	Enabled:       proc "c" (^uiControl) -> i32,
	Enable:        proc "c" (^uiControl),
	Disable:       proc "c" (^uiControl),
}

uiWindow :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiControlDestroy   :: proc(^uiControl) ---
	uiControlHandle    :: proc(^uiControl) -> c.uintptr_t ---
	uiControlParent    :: proc(^uiControl) -> ^uiControl ---
	uiControlSetParent :: proc(^uiControl, ^uiControl) ---
	uiControlToplevel  :: proc(^uiControl) -> i32 ---
	uiControlVisible   :: proc(^uiControl) -> i32 ---
	uiControlShow      :: proc(^uiControl) ---
	uiControlHide      :: proc(^uiControl) ---
	uiControlEnabled   :: proc(^uiControl) -> i32 ---
	uiControlEnable    :: proc(^uiControl) ---
	uiControlDisable   :: proc(^uiControl) ---
	uiAllocControl     :: proc(n: c.size_t, OSsig: u32, typesig: u32, typenamestr: cstring) -> ^uiControl ---
	uiFreeControl      :: proc(^uiControl) ---

	// TODO make sure all controls have these
	uiControlVerifySetParent           :: proc(^uiControl, ^uiControl) ---
	uiControlEnabledToUser             :: proc(^uiControl) -> i32 ---
	uiUserBugCannotSetParentOnToplevel :: proc(type: cstring) ---
}

@(default_calling_convention="c")
foreign lib {
	uiWindowTitle                :: proc(w: ^uiWindow) -> cstring ---
	uiWindowSetTitle             :: proc(w: ^uiWindow, title: cstring) ---
	uiWindowContentSize          :: proc(w: ^uiWindow, width: ^i32, height: ^i32) ---
	uiWindowSetContentSize       :: proc(w: ^uiWindow, width: i32, height: i32) ---
	uiWindowFullscreen           :: proc(w: ^uiWindow) -> i32 ---
	uiWindowSetFullscreen        :: proc(w: ^uiWindow, fullscreen: i32) ---
	uiWindowOnContentSizeChanged :: proc(w: ^uiWindow, f: proc "c" (^uiWindow, rawptr), data: rawptr) ---
	uiWindowOnClosing            :: proc(w: ^uiWindow, f: proc "c" (w: ^uiWindow, data: rawptr) -> i32, data: rawptr) ---
	uiWindowBorderless           :: proc(w: ^uiWindow) -> i32 ---
	uiWindowSetBorderless        :: proc(w: ^uiWindow, borderless: i32) ---
	uiWindowSetChild             :: proc(w: ^uiWindow, child: ^uiControl) ---
	uiWindowMargined             :: proc(w: ^uiWindow) -> i32 ---
	uiWindowSetMargined          :: proc(w: ^uiWindow, margined: i32) ---
	uiNewWindow                  :: proc(title: cstring, width: i32, height: i32, hasMenubar: i32) -> ^uiWindow ---
}

uiButton :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiButtonText      :: proc(b: ^uiButton) -> cstring ---
	uiButtonSetText   :: proc(b: ^uiButton, text: cstring) ---
	uiButtonOnClicked :: proc(b: ^uiButton, f: proc "c" (b: ^uiButton, data: rawptr), data: rawptr) ---
	uiNewButton       :: proc(text: cstring) -> ^uiButton ---
}

uiBox :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiBoxAppend        :: proc(b: ^uiBox, child: ^uiControl, stretchy: i32) ---
	uiBoxDelete        :: proc(b: ^uiBox, index: i32) ---
	uiBoxPadded        :: proc(b: ^uiBox) -> i32 ---
	uiBoxSetPadded     :: proc(b: ^uiBox, padded: i32) ---
	uiNewHorizontalBox :: proc() -> ^uiBox ---
	uiNewVerticalBox   :: proc() -> ^uiBox ---
}

uiCheckbox :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiCheckboxText       :: proc(_c: ^uiCheckbox) -> cstring ---
	uiCheckboxSetText    :: proc(_c: ^uiCheckbox, text: cstring) ---
	uiCheckboxOnToggled  :: proc(_c: ^uiCheckbox, f: proc "c" (_c: ^uiCheckbox, data: rawptr), data: rawptr) ---
	uiCheckboxChecked    :: proc(_c: ^uiCheckbox) -> i32 ---
	uiCheckboxSetChecked :: proc(_c: ^uiCheckbox, checked: i32) ---
	uiNewCheckbox        :: proc(text: cstring) -> ^uiCheckbox ---
}

uiEntry :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiEntryText        :: proc(e: ^uiEntry) -> cstring ---
	uiEntrySetText     :: proc(e: ^uiEntry, text: cstring) ---
	uiEntryOnChanged   :: proc(e: ^uiEntry, f: proc "c" (e: ^uiEntry, data: rawptr), data: rawptr) ---
	uiEntryReadOnly    :: proc(e: ^uiEntry) -> i32 ---
	uiEntrySetReadOnly :: proc(e: ^uiEntry, readonly: i32) ---
	uiNewEntry         :: proc() -> ^uiEntry ---
	uiNewPasswordEntry :: proc() -> ^uiEntry ---
	uiNewSearchEntry   :: proc() -> ^uiEntry ---
}

uiLabel :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiLabelText    :: proc(l: ^uiLabel) -> cstring ---
	uiLabelSetText :: proc(l: ^uiLabel, text: cstring) ---
	uiNewLabel     :: proc(text: cstring) -> ^uiLabel ---
}

uiTab :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiTabAppend      :: proc(t: ^uiTab, name: cstring, _c: ^uiControl) ---
	uiTabInsertAt    :: proc(t: ^uiTab, name: cstring, before: i32, _c: ^uiControl) ---
	uiTabDelete      :: proc(t: ^uiTab, index: i32) ---
	uiTabNumPages    :: proc(t: ^uiTab) -> i32 ---
	uiTabMargined    :: proc(t: ^uiTab, page: i32) -> i32 ---
	uiTabSetMargined :: proc(t: ^uiTab, page: i32, margined: i32) ---
	uiNewTab         :: proc() -> ^uiTab ---
}

uiGroup :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiGroupTitle       :: proc(g: ^uiGroup) -> cstring ---
	uiGroupSetTitle    :: proc(g: ^uiGroup, title: cstring) ---
	uiGroupSetChild    :: proc(g: ^uiGroup, _c: ^uiControl) ---
	uiGroupMargined    :: proc(g: ^uiGroup) -> i32 ---
	uiGroupSetMargined :: proc(g: ^uiGroup, margined: i32) ---
	uiNewGroup         :: proc(title: cstring) -> ^uiGroup ---
}

uiSpinbox :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiSpinboxValue     :: proc(s: ^uiSpinbox) -> i32 ---
	uiSpinboxSetValue  :: proc(s: ^uiSpinbox, value: i32) ---
	uiSpinboxOnChanged :: proc(s: ^uiSpinbox, f: proc "c" (s: ^uiSpinbox, data: rawptr), data: rawptr) ---
	uiNewSpinbox       :: proc(min: i32, max: i32) -> ^uiSpinbox ---
}

uiSlider :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiSliderValue     :: proc(s: ^uiSlider) -> i32 ---
	uiSliderSetValue  :: proc(s: ^uiSlider, value: i32) ---
	uiSliderOnChanged :: proc(s: ^uiSlider, f: proc "c" (s: ^uiSlider, data: rawptr), data: rawptr) ---
	uiNewSlider       :: proc(min: i32, max: i32) -> ^uiSlider ---
}

uiProgressBar :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiProgressBarValue    :: proc(p: ^uiProgressBar) -> i32 ---
	uiProgressBarSetValue :: proc(p: ^uiProgressBar, n: i32) ---
	uiNewProgressBar      :: proc() -> ^uiProgressBar ---
}

uiSeparator :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiNewHorizontalSeparator :: proc() -> ^uiSeparator ---
	uiNewVerticalSeparator   :: proc() -> ^uiSeparator ---
}

uiCombobox :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiComboboxAppend      :: proc(_c: ^uiCombobox, text: cstring) ---
	uiComboboxSelected    :: proc(_c: ^uiCombobox) -> i32 ---
	uiComboboxSetSelected :: proc(_c: ^uiCombobox, n: i32) ---
	uiComboboxOnSelected  :: proc(_c: ^uiCombobox, f: proc "c" (_c: ^uiCombobox, data: rawptr), data: rawptr) ---
	uiNewCombobox         :: proc() -> ^uiCombobox ---
}

uiEditableCombobox :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiEditableComboboxAppend  :: proc(_c: ^uiEditableCombobox, text: cstring) ---
	uiEditableComboboxText    :: proc(_c: ^uiEditableCombobox) -> cstring ---
	uiEditableComboboxSetText :: proc(_c: ^uiEditableCombobox, text: cstring) ---

	// TODO what do we call a function that sets the currently selected item and fills the text field with it? editable comboboxes have no consistent concept of selected item
	uiEditableComboboxOnChanged :: proc(_c: ^uiEditableCombobox, f: proc "c" (_c: ^uiEditableCombobox, data: rawptr), data: rawptr) ---
	uiNewEditableCombobox       :: proc() -> ^uiEditableCombobox ---
}

uiRadioButtons :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiRadioButtonsAppend      :: proc(r: ^uiRadioButtons, text: cstring) ---
	uiRadioButtonsSelected    :: proc(r: ^uiRadioButtons) -> i32 ---
	uiRadioButtonsSetSelected :: proc(r: ^uiRadioButtons, n: i32) ---
	uiRadioButtonsOnSelected  :: proc(r: ^uiRadioButtons, f: proc "c" (^uiRadioButtons, rawptr), data: rawptr) ---
	uiNewRadioButtons         :: proc() -> ^uiRadioButtons ---
}

tm               :: struct {}
uiDateTimePicker :: struct {}
